--- a/i386/DEBIAN/control
+++ b/i386/DEBIAN/control
@@ -1,12 +1,12 @@
 Package: teamspeak3-client
-Version: 3.0.13.1-1
+Version: 3.2.3
 Architecture: i386
-Maintainer: Florian Dhomps (Dh0mp5eur) <dhomps.florian@gmail.com>
-Installed-Size: 
-Depends: 
+Maintainer: Tommy Miland (tmiland) <kontakt@tmiland.com>
+Installed-Size:
+Depends:
 Section: non-free/net
 Priority: optional
-Homepage: https://github.com/Dh0mp5eur/TeamSpeak3-Client
+Homepage: https://github.com/tmiland/TeamSpeak3-Client
 Description: VoIP chat for online gaming
  TeamSpeak is a quality, scalable application which enables people to speak
  with one another over the Internet. TeamSpeak consists of both client and
